# AI-Generated-Text-Detector

./: AI_Generated_Text_Detector.ipynb  AI_Generated_Text_Detector_nb.ipynb  README.md  ai_generated_text_detector.ipynb  pyproject.toml  requirements.txt  tdIdf.ipynb
.github/workflows/: notebook_runner.yml
data/: .gitignore  argugpt.csv  sample_submission.csv.dvc  test_essays.csv.dvc  text_df_2024_11_14.csv  tfidf_ngram_features.csv  train_essays.csv.dvc  train_prompts.csv.dvc  valid_essays.parquet
