[project]
name = "ai-generated-text-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gensim>=4.3.2",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.2",
    "textblob>=0.18.0.post0",
    "transformers>=4.46.2",
    "uv>=0.5.2",
]
